rewrite get_config_files()

--- a/paperpi/paperpi.ipynb
+++ b/paperpi/paperpi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9fb37099",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a76cde1d",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,8 @@
     "import logging.config\n",
     "import sys\n",
     "import shutil\n",
+    "import json\n",
+    "from json import JSONDecodeError\n",
     "from itertools import cycle\n",
     "from inspect import getfullargspec\n",
     "from importlib import import_module\n",
@@ -29,12 +31,13 @@
     "from distutils.util import strtobool\n",
     "from time import sleep\n",
     "from configparser import DuplicateSectionError\n",
-    "from configparser import Error as ConfigParserError"
+    "from configparser import Error as ConfigParserError\n",
+    "import jsonmerge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ba4edc48",
    "metadata": {},
    "outputs": [],
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a6aaf95",
    "metadata": {},
    "outputs": [],
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "499f9122",
    "metadata": {},
    "outputs": [],
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "940ef124",
    "metadata": {},
    "outputs": [],
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f5f08cc6",
    "metadata": {},
    "outputs": [],
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5c38a9da",
    "metadata": {},
    "outputs": [],
@@ -235,70 +238,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "2d859b26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_config_files(cmd_args=None):\n",
+    "    '''Load json configuration files and merge options destructively\n",
+    "    \n",
+    "    Args:\n",
+    "        cmd_args(`ArgConfigPars.CmdArgs` obj)\n",
+    "        \n",
+    "    Returns:\n",
+    "        json dict of configuration\n",
+    "    \n",
+    "    '''\n",
+    "    # FIXME - consider removing ArgConfigParse and switching to standard python lib\n",
+    "    \n",
+    "\n",
+    "    # all the possible config files\n",
+    "    config_files_dict = {\n",
+    "        'base': constants.CONFIG_BASE,\n",
+    "        'system': constants.CONFIG_SYSTEM,\n",
+    "        'user': constants.CONFIG_USER,\n",
+    "        'cmd_line': None\n",
+    "    }\n",
+    "    \n",
+    "    # always include the base configuration file\n",
+    "    config_files_list = [config_files_dict['base']]\n",
+    "\n",
+    "    json_config = {}\n",
+    "    \n",
+    "    \n",
+    "    try:\n",
+    "        daemon_mode = cmd_args.options.main__daemon\n",
+    "    except AttributeError:\n",
+    "        logging.info(f'daemon mode not set')\n",
+    "        daemon_mode = False\n",
+    "    \n",
+    "    # use the user provided config file if possible\n",
+    "    try:\n",
+    "        config_file_user = cmd_args.options.user_config\n",
+    "    except AttributeError:\n",
+    "        logging.debug('no user specified config file')\n",
+    "        user_config_file = None\n",
+    "    else:\n",
+    "        config_files_dict['cmd_line'] = config_file_user\n",
+    "        \n",
+    "    if config_files_dict['cmd_line']:\n",
+    "        if daemon_mode:\n",
+    "            logging.warning(f'daemon mode was set, but is ignored due to user specified config file')\n",
+    "        config_files_list.append(config_files_dict['cmd_line'])\n",
+    "    elif daemon_mode:\n",
+    "        config_files_list.append(config_files_dict['system'])\n",
+    "    else:\n",
+    "        config_files_list.append(config_files_dict['user'])\n",
+    "        if not config_files_dict['user'].exists():\n",
+    "            try:\n",
+    "                constants.CONFIG_USER.parent.mkdir(parents=True, exist_ok=True)\n",
+    "            except PermissionError as e:\n",
+    "                msg=f'could not create user configuration directory: {constants.CONFIG_USER.parent}'\n",
+    "                logger.critical(msg)\n",
+    "                do_exit(1, msg)\n",
+    "            try:\n",
+    "                shutil.copy(constants.CONFIG_BASE, constants.CONFIG_USER)\n",
+    "            except Exception as e:\n",
+    "                msg=f'could not copy user configuration file to {constants.CONFIG_USER}'\n",
+    "                logging.critical(1, msg)\n",
+    "                do_exit(1, msg)\n",
+    "            \n",
+    "    logging.debug(f'using config files: {config_files_list}')\n",
+    "        \n",
+    "    for cfg_file in config_files_list:\n",
+    "        logging.info(f'parsing {cfg_file}')\n",
+    "        try:\n",
+    "            with open(cfg_file) as f:\n",
+    "                data = json.load(f)\n",
+    "        except OSError as e:\n",
+    "            logging.warning(f'failed to load config file: {e}')\n",
+    "            data = {}\n",
+    "        except JSONDecodeError as e:\n",
+    "            logging.warning(f'error in JSON file \"{f.name}\": {e}')\n",
+    "            data = {}\n",
+    "        logging.debug(f'data: {data}')\n",
+    "        json_config = jsonmerge.merge(json_config, data)\n",
+    "    \n",
+    "    return json_config\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "431ad66a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_config_files(cmd_args):\n",
-    "    '''read config.ini style files(s)\n",
+    "# def get_config_files(cmd_args):\n",
+    "#     '''read config.ini style files(s)\n",
     "    \n",
-    "    Args: \n",
-    "        cmd_args(`ArgConfigParse.CmdArgs` obj)\n",
+    "#     Args: \n",
+    "#         cmd_args(`ArgConfigParse.CmdArgs` obj)\n",
     "        \n",
-    "    Returns:\n",
-    "        ArgConfigParse.ConfgifFile'''\n",
+    "#     Returns:\n",
+    "#         ArgConfigParse.ConfgifFile'''\n",
     "    \n",
-    "    config_files_dict = {'base': constants.CONFIG_BASE,\n",
-    "                         'system': constants.CONFIG_SYSTEM,\n",
-    "                         'user': constants.CONFIG_USER,\n",
-    "                         'cmd_line': cmd_args.options.user_config}\n",
+    "#     config_files_dict = {'base': constants.CONFIG_BASE,\n",
+    "#                          'system': constants.CONFIG_SYSTEM,\n",
+    "#                          'user': constants.CONFIG_USER,\n",
+    "#                          'cmd_line': cmd_args.options.user_config}\n",
     "    \n",
-    "    config_files_list = [config_files_dict['base']]\n",
+    "#     config_files_list = [config_files_dict['base']]\n",
     "    \n",
-    "    if config_files_dict['cmd_line']:\n",
-    "        config_file = config_files_dict['cmd_line']\n",
-    "    else:\n",
-    "        if cmd_args.options.main__daemon:\n",
-    "            config_file = config_files_dict['system']\n",
-    "        else:\n",
-    "            config_file = config_files_dict['user']\n",
-    "            if not config_file.exists():\n",
-    "                try:\n",
-    "                    constants.CONFIG_USER.parent.mkdir(parents=True, exist_ok=True)\n",
-    "                except PermissionError as e:\n",
-    "                    msg=f'could not create user configuration directory: {constants.CONFIG_USER.parent}'\n",
-    "                    logger.critical(msg)\n",
-    "                    do_exit(1, msg)\n",
-    "                try:\n",
-    "                    shutil.copy(constants.CONFIG_BASE, constants.CONFIG_USER)\n",
-    "                except Exception as e:\n",
-    "                    msg=f'could not copy user configuration file to {constants.CONFIG_USER}'\n",
-    "                    logging.critical(1, msg)\n",
-    "                    do_exit(1, msg)\n",
-    "                msg = f'''This appears to be the first time PaperPi has been run.\n",
-    "    A user configuration file created: {constants.CONFIG_USER}\n",
-    "    At minimum you edit this file and add a display_type and enable one plugin.\n",
+    "#     if config_files_dict['cmd_line']:\n",
+    "#         config_file = config_files_dict['cmd_line']\n",
+    "#     else:\n",
+    "#         if cmd_args.options.main__daemon:\n",
+    "#             config_file = config_files_dict['system']\n",
+    "#         else:\n",
+    "#             config_file = config_files_dict['user']\n",
+    "#             if not config_file.exists():\n",
+    "#                 try:\n",
+    "#                     constants.CONFIG_USER.parent.mkdir(parents=True, exist_ok=True)\n",
+    "#                 except PermissionError as e:\n",
+    "#                     msg=f'could not create user configuration directory: {constants.CONFIG_USER.parent}'\n",
+    "#                     logger.critical(msg)\n",
+    "#                     do_exit(1, msg)\n",
+    "#                 try:\n",
+    "#                     shutil.copy(constants.CONFIG_BASE, constants.CONFIG_USER)\n",
+    "#                 except Exception as e:\n",
+    "#                     msg=f'could not copy user configuration file to {constants.CONFIG_USER}'\n",
+    "#                     logging.critical(1, msg)\n",
+    "#                     do_exit(1, msg)\n",
+    "#                 msg = f'''This appears to be the first time PaperPi has been run.\n",
+    "#     A user configuration file created: {constants.CONFIG_USER}\n",
+    "#     At minimum you edit this file and add a display_type and enable one plugin.\n",
     "\n",
-    "    Edit the configuration file with:\n",
-    "       $ nano {constants.CONFIG_USER}'''\n",
-    "                do_exit(0, msg)\n",
+    "#     Edit the configuration file with:\n",
+    "#        $ nano {constants.CONFIG_USER}'''\n",
+    "#                 do_exit(0, msg)\n",
     "        \n",
-    "    config_files_list.append(config_file)\n",
+    "#     config_files_list.append(config_file)\n",
     "    \n",
     "    \n",
-    "    logger.info(f'using configuration files to configure PaperPi: {config_files_list}')\n",
-    "    config_files = ArgConfigParse.ConfigFile(config_files_list, ignore_missing=True)\n",
-    "    try:\n",
-    "        config_files.parse_config()\n",
-    "    except DuplicateSectionError as e:\n",
-    "        logger.error(f'{e}')\n",
-    "        config_files = None\n",
-    "    except ConfigParserError as e:\n",
-    "        logging.error(f'error processing config file: {e}')\n",
-    "        config_files = None\n",
+    "#     logger.info(f'using configuration files to configure PaperPi: {config_files_list}')\n",
+    "#     config_files = ArgConfigParse.ConfigFile(config_files_list, ignore_missing=True)\n",
+    "#     try:\n",
+    "#         config_files.parse_config()\n",
+    "#     except DuplicateSectionError as e:\n",
+    "#         logger.error(f'{e}')\n",
+    "#         config_files = None\n",
+    "#     except ConfigParserError as e:\n",
+    "#         logging.error(f'error processing config file: {e}')\n",
+    "#         config_files = None\n",
     "\n",
-    "    return config_files\n",
+    "#     return config_files\n",
     "    "
    ]
   },
@@ -659,7 +754,10 @@
     "    if not config_files:\n",
     "        print('Fatal error collecting configuration files. See the logs.')\n",
     "        return\n",
-    "    \n",
+    "   \n",
+    "\n",
+    "    # FIXME - everything below this point needs to be rewritten\n",
+    "\n",
     "    # merge the config files and the command line arguments (right-most overwrites left)\n",
     "    config = ArgConfigParse.merge_dict(config_files.config_dict, cmd_args.nested_opts_dict)\n",
     "    \n",
@@ -718,9 +816,6 @@
     "\n",
     "        \n",
     "    logger.debug(f'configuration:\\n{config}\\n\\n')\n",
-    "\n",
-    "    \n",
-    "#     return(config)\n",
     "    \n",
     "    screen_return = setup_display(config)\n",
     "    \n",
@@ -796,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "512001a8",
    "metadata": {},
    "outputs": [
@@ -805,7 +900,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook paperpi.ipynb to python\n",
-      "[NbConvertApp] Writing 24967 bytes to paperpi.py\n"
+      "[NbConvertApp] Writing 27989 bytes to paperpi.py\n"
      ]
     }
    ],
