--- a/paperpi/paperpi.ipynb
+++ b/paperpi/paperpi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9fb37099",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a76cde1d",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,13 @@
     "from time import sleep\n",
     "from configparser import DuplicateSectionError\n",
     "from configparser import Error as ConfigParserError\n",
-    "import jsonmerge"
+    "import jsonmerge\n",
+    "from dictor import dictor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ba4edc48",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9a6aaf95",
    "metadata": {},
    "outputs": [],
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "499f9122",
    "metadata": {},
    "outputs": [],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "940ef124",
    "metadata": {},
    "outputs": [],
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f5f08cc6",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5c38a9da",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2d859b26",
    "metadata": {},
    "outputs": [],
@@ -268,6 +269,8 @@
     "    config_files_list = [config_files_dict['base']]\n",
     "\n",
     "    json_config = {}\n",
+    "    \n",
+    "    json_config['config_files'] = config_files_list\n",
     "    \n",
     "    \n",
     "    try:\n",
@@ -326,6 +329,98 @@
     "    return json_config\n",
     "            \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17d19382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_config(json_config=None):\n",
+    "    '''Parse configuration file and return only the values for each dictionary entry\n",
+    "    \n",
+    "    Args:\n",
+    "        json_config(`dict`): json formatted configuration file\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict of dict key/values\n",
+    "        '''\n",
+    "    \n",
+    "    parsed_config = {}\n",
+    "\n",
+    "    for section in json_config:\n",
+    "        parsed_config[section] = {}\n",
+    "        config_opts = dictor(c, section)\n",
+    "        \n",
+    "        # handle config \"sections\" that are not dictionaries\n",
+    "        if not isinstance(config_opts, dict):\n",
+    "            logging.info(f'section \"{section}\" did not contain parsable values, storing data')\n",
+    "            parsed_config[section] = json_config.get(section, None)\n",
+    "            continue\n",
+    "\n",
+    "        # search for the key 'value' in each option\n",
+    "        for option, values in config_opts.items():\n",
+    "            value = dictor(values, search='value', default=[None])\n",
+    "            parsed_config[section][option] = value[0]\n",
+    "\n",
+    "    return parsed_config\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4acfc68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def parse_config(json_config=None):\n",
+    "#     '''Parse configuration file and return only the values for each dictionary entry\n",
+    "    \n",
+    "#     Args:\n",
+    "#         json_config(`dict`): json formatted configuration file\n",
+    "        \n",
+    "#     Returns:\n",
+    "#         dict of dict key/values\n",
+    "#         '''\n",
+    "    \n",
+    "#     if not isinstance(json_config, dict):\n",
+    "#         logging.error('config file did not contain a valid json like object')\n",
+    "#         return None\n",
+    "    \n",
+    "#     parsed_config = {}\n",
+    "#     warnings = []\n",
+    "    \n",
+    "#     for section, section_keys in json_config.items():\n",
+    "#         logging.debug(f'processing section \"{section}\"')\n",
+    "#         parsed_config[section] = {}\n",
+    "#         if isinstance(section_keys, dict):\n",
+    "#             for config_opt, opt_keys in section_keys.items():\n",
+    "                \n",
+    "#                 for key, value in opt_keys.items():\n",
+    "#                     found_value = False\n",
+    "#                     if key == 'value':\n",
+    "#                         found_value = value\n",
+    "#                         logging.debug(f'found_value: {found_value}')\n",
+    "                    \n",
+    "#                 if found_value:\n",
+    "#                     parsed_config[section][config_opt][key] = found_value\n",
+    "#                 else:\n",
+    "#                     warnings.append(f'{section}[{key}] did not contain a value')\n",
+    "  \n",
+    "#         else:\n",
+    "#             logging.info(f'section \"{section}\" did not contain parsable values')\n",
+    "#             parsed_config[section] = section_keys\n",
+    "#             continue\n",
+    "        \n",
+    "        \n",
+    "#     print(warnings)\n",
+    "        \n",
+    "#     return parsed_config\n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -736,30 +831,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aecc9678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a1c3866",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    cmd_args = get_cmd_line_args()\n",
-    "    \n",
-    "    \n",
+    "        \n",
     "    if hasattr(cmd_args, 'unknown'):\n",
     "        print(f'Unknown arguments: {cmd_args.unknown}\\n\\n')\n",
     "        cmd_args.parser.print_help()\n",
     "        return\n",
+    "\n",
     "    \n",
-    "    config_files = get_config_files(cmd_args)\n",
+    "#     config_files = get_config_files(cmd_args)\n",
+    "    config_json = get_config_files(cmd_args)\n",
     "    \n",
-    "    if not config_files:\n",
-    "        print('Fatal error collecting configuration files. See the logs.')\n",
-    "        return\n",
-    "   \n",
+    "    if not config_json:\n",
+    "        print('Fatal error collecting and processing configuration files. See the logs.')\n",
+    "        return 1\n",
+    "    \n",
+    "    config_dict = parse_config(config_json)\n",
+    "    \n",
+    "    if not config_dict:\n",
+    "        print('Fatal error parssing configuartion files. See the logs.')\n",
+    "        return 1\n",
     "\n",
     "    # FIXME - everything below this point needs to be rewritten\n",
     "\n",
-    "    # merge the config files and the command line arguments (right-most overwrites left)\n",
-    "    config = ArgConfigParse.merge_dict(config_files.config_dict, cmd_args.nested_opts_dict)\n",
+    "    \n",
+    "    # TODO merge the config files and the command line arguments (right-most overwrites left)\n",
+    "#     config = ArgConfigParse.merge_dict(config_files.config_dict, cmd_args.nested_opts_dict)\n",
+    "    \n",
     "    \n",
     "    # convert all config values to int, float, etc.\n",
     "    config = config_str_to_val(config)\n",
@@ -891,7 +1002,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "b3771bb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exit_code[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "512001a8",
    "metadata": {},
    "outputs": [
@@ -900,7 +1021,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook paperpi.ipynb to python\n",
-      "[NbConvertApp] Writing 27989 bytes to paperpi.py\n"
+      "[NbConvertApp] Writing 30832 bytes to paperpi.py\n"
      ]
     }
    ],
