parse and merge command line options into config

--- a/paperpi/paperpi.ipynb
+++ b/paperpi/paperpi.ipynb
@@ -326,6 +326,28 @@
     "        logging.debug(f'data: {data}')\n",
     "        json_config = jsonmerge.merge(json_config, data)\n",
     "    \n",
+    "    # convert command line options into 'key' {'value': value} format\n",
+    "    # this is a little round-about, but keeps all of the merging in one place\n",
+    "    cmd_options_dict = {}\n",
+    "\n",
+    "    if isinstance(d, dict):\n",
+    "        for section, options in d.items():\n",
+    "            cmd_options_dict[section] = {}\n",
+    "            try:\n",
+    "                for key, value in options.items():\n",
+    "                    cmd_options_dict[section][key] = {\"value\": value}\n",
+    "            except AttributeError as e:\n",
+    "                logging.warning(f'{e}: skipping unparsable command arg: {section}: {options}')\n",
+    "    else:\n",
+    "        logging.warning('invalid ArgConfigParse.CmdArgs object')\n",
+    "\n",
+    "    # merge command lines options into main configuration\n",
+    "    try:\n",
+    "        json_config = jsonmerge.merge(json_config, cmd_options_dict)\n",
+    "    except AttributeError:\n",
+    "        logging.debug(f'ArgConfigPars.CmdArgs object was not provided or was malformed')\n",
+    "    \n",
+    "    \n",
     "    return json_config\n",
     "            \n",
     "    "
@@ -334,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d19382",
+   "id": "3ad3c7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +374,13 @@
     "\n",
     "    for section in json_config:\n",
     "        parsed_config[section] = {}\n",
-    "        config_opts = dictor(c, section)\n",
+    "        config_opts = dictor(json_config, section)\n",
     "        \n",
     "        # handle config \"sections\" that are not dictionaries\n",
     "        if not isinstance(config_opts, dict):\n",
-    "            logging.info(f'section \"{section}\" did not contain parsable values, storing data')\n",
-    "            parsed_config[section] = json_config.get(section, None)\n",
+    "            data = json_config.get(section, None)\n",
+    "            logging.info(f'section \"{section}\" did not contain parsable values, storing data: {data}')\n",
+    "            parsed_config[section] = data\n",
     "            continue\n",
     "\n",
     "        # search for the key 'value' in each option\n",
@@ -372,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4acfc68",
+   "id": "3a7cda49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,14 +854,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aecc9678",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4a1c3866",
    "metadata": {},
    "outputs": [],
@@ -859,21 +874,14 @@
     "        print('Fatal error collecting and processing configuration files. See the logs.')\n",
     "        return 1\n",
     "    \n",
-    "    config_dict = parse_config(config_json)\n",
+    "    config = parse_config(config_json)\n",
     "    \n",
-    "    if not config_dict:\n",
+    "    if not config:\n",
     "        print('Fatal error parssing configuartion files. See the logs.')\n",
-    "        return 1\n",
-    "\n",
-    "    # FIXME - everything below this point needs to be rewritten\n",
-    "\n",
-    "    \n",
-    "    # TODO merge the config files and the command line arguments (right-most overwrites left)\n",
-    "#     config = ArgConfigParse.merge_dict(config_files.config_dict, cmd_args.nested_opts_dict)\n",
-    "    \n",
-    "    \n",
+    "        return 1    \n",
+    " \n",
     "    # convert all config values to int, float, etc.\n",
-    "    config = config_str_to_val(config)\n",
+    "#     config = config_str_to_val(config)\n",
     "        \n",
     "    if cmd_args.options.version:\n",
     "        print(constants.VERSION_STRING)\n",
@@ -946,7 +954,7 @@
     "    config['main']['force_onebit'] = one_bit\n",
     "    config['main']['screen_mode'] = screen.mode\n",
     "    \n",
-    "    logging.info('configured')\n",
+    "    logging.info('screen configured')\n",
     "            \n",
     "    splash = setup_splash(config, screen.resolution)\n",
     "    \n",
@@ -1003,28 +1011,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3771bb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exit_code[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "512001a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook paperpi.ipynb to python\n",
-      "[NbConvertApp] Writing 30832 bytes to paperpi.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter-nbconvert --to python --template python_clean paperpi.ipynb"
    ]
